# QuantLab

./: .gitignore  README.md
.github/workflows/: test.yml
dashboard/: app.py  requirements.txt  test_results.json
dashboard/.streamlit/: config.toml
dashboard/data/: boe_mortgage_rates.csv  london_borough_rents.csv  london_council_tax.csv  london_district_to_borough.csv
dashboard/lib/: mermaid.py  nav.py  plotting.py  projects.py  render_admin.py
dashboard/pages/: 0_QuantLabs.py  10_Credit_Card_Calculator.py  11_Loan_Amortization.py  12_Loan_Comparison.py  13_Retirement_Calculator.py  14_Investment_Planner.py  15_Budget_Tracker.py  16_Rent_vs_Buy.py  1_Stock_Risk_Scanner.py  20_Currency_Dashboard.py  21_Stock_Tracker.py  22_Stock_Analysis.py  23_Crypto_Portfolio.py  24_Personal_Finance.py  25_ESG_Tracker.py  26_Financial_Reporting.py  2_System_Health.py  30_VaR_CVaR.py  31_Time_Series.py  32_Sentiment_Analysis.py  33_Anomaly_Detection.py  34_Loan_Default.py  35_Clustering.py  36_Portfolio_Optimization.py  37_Algo_Trading.py  38_Stock_Prediction.py  39_Market_Insights.py  40_Benchmark_Rates.py  41_Plotting_Libraries.py  42_London_House_Prices.py  50_Etymology.py  70_Global_Contagion.py  99_Admin.py  99_Churros.py  9_System_Health.py
dashboard/tests/: conftest.py  test_admin.py  test_budget_tracker.py  test_churros.py  test_contagion_constants.py  test_contagion_correlations.py  test_credit_card_calculator.py  test_crypto_portfolio.py  test_currency_dashboard.py  test_esg_tracker.py  test_financial_reporting.py  (+15 more)
docs/: MAINTENANCE.md  rds-admin-policy.json  streamlit-admin-setup.md
exercises/15-sqs-sns-credit-spreads/: pyproject.toml
exercises/15-sqs-sns-credit-spreads/src/: credit_spreads.py
exercises/15-sqs-sns-credit-spreads/tests/: test_credit_spreads.py
exercises/16-websockets-realtime/: pyproject.toml
exercises/16-websockets-realtime/src/: ws_handler.py
exercises/16-websockets-realtime/tests/: test_ws_handler.py
exercises/20-integration-testing-var/: pyproject.toml
exercises/20-integration-testing-var/src/: credit_var.py
exercises/20-integration-testing-var/tests/: test_credit_var.py
projects/stock-risk-scanner/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
projects/stock-risk-scanner/alembic/: env.py
projects/stock-risk-scanner/alembic/versions/: 002878ddee4c_create_scan_records_table.py
projects/stock-risk-scanner/src/scanner/: db.py  db_models.py  main.py  market_data.py  models.py  narrative.py  risk.py
projects/stock-risk-scanner/tests/: test_api.py  test_db_layer.py  test_market_data.py  test_models.py  test_narrative.py  test_risk.py
scripts/: fetch_contagion_data.py
(+46 files in other folders)
