[project]
name = "sqs-sns-credit-spreads-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "numpy>=1.26.0",
    "fredapi>=0.5.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "moto[sqs,sns]>=5.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["credit_spreads"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
