[project]
name = "websockets-realtime-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["boto3>=1.35.0", "websockets>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "moto[dynamodb,apigateway]>=5.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["ws_handler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
