[project]
name = "stock-risk-scanner"
version = "0.1.0"
description = "Portfolio risk scanner with AI-generated narratives"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.0",
    "yfinance>=0.2.40",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
